static/collection_display.css
body {
    background-color: #86b3d1;
    font-family: Roboto, sans-serif;
}

.viewing{
    font-size: 2em;
    text-align: center;
    text-transform: uppercase;
}

.name{
    font-size: 3em;
    font-weight: bold;
    text-align: center;
    text-transform: uppercase;
}

.address{
    font-size: 1em;
    text-align: center;
    text-transform: uppercase;
    margin-bottom: 2em;
}

.album{
    margin: 0;
    overflow: hidden;
}

.image{
    display: inline-block;
  margin-bottom: 8px;
  margin-right: 8px;
  text-decoration: none;
  color: black;
    cursor: pointer;
}

.image:nth-of-type(2n){
    margin-right: 0;
}

.image:hover img {
  transform: scale(1.15);
}

img {
  border: none;
  max-width: 100%;
  height: auto;
  display: block;
  background: #ccc;
  transition: transform .2s ease-in-out;
}

.gallery{
    margin-top: 1em;
    background-color: #86b3d1;
      display: flex;
  flex-wrap: wrap;
}

.main{
    background-color: #86b3d1;
}

.add-button {
    color: black !important;
    text-transform: uppercase;
    font-size: 3em;
    font-weight: bold;
    text-decoration: none;
    background: #86b3d1;
    width: 300px;
    height: 300px;
    display: inline-block;
    border: thick solid black;
    transition: all 0.4s ease 0s;
}

.add-button:hover {
    color: black !important;
    background: #5cdb95;
    border-color: black !important;
    transition: all 0.4s ease 0s;
    cursor: pointer;
}

